Provide more memory to the application explicitly